--- a/mo3adala-handasa/src/app/pages/home/home.page.html
+++ b/mo3adala-handasa/src/app/pages/home/home.page.html
@@ -462,7 +462,7 @@
 
 		<!-- Call to Action -->
 		<div class="text-center mt-12" @fadeInUp>
-			<a routerLink="/contact" class="inline-block bg-orange-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-orange-700 transition-colors duration-300">
+			<a routerLink="/subscription-details" class="inline-block bg-orange-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-orange-700 transition-colors duration-300">
 				انضم إلى مئات الطلاب الناجحين
 			</a>
 		</div>
