--- a/mo3adala-handasa/src/app/shared/components/what-is-equation/what-is-equation.component.html
+++ b/mo3adala-handasa/src/app/shared/components/what-is-equation/what-is-equation.component.html
@@ -18,7 +18,7 @@
 			<div class="relative bg-black rounded-xl overflow-hidden shadow-2xl" style="padding-bottom: 56.25%;">
 				<iframe 
 					class="absolute top-0 left-0 w-full h-full"
-					src="https://www.youtube.com/embed/4AE400Mm9DU?si=gRagLq4_HFtQzRw_"
+					src="https://www.youtube.com/embed/7j0Xk8iZlzU?si=Rpo1r4CWFlcvKYwX"
 					title="ابلكيشن معادلة كلية هندسة"
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
