Add system button

--- a/mo3adala-handasa/src/app/pages/subscription-details/subscription-details.page.html
+++ b/mo3adala-handasa/src/app/pages/subscription-details/subscription-details.page.html
@@ -13,7 +13,7 @@
 		<br>
 		<h2 class="banner-title">تم غلق باب الاشتراك مؤقتًا</h2>
 		<p class="banner-description">
-			انتهى الحجز للمشتركين الجدد 10/1/2026 الساعة 10 مساءً. تابعنا على المنصة والسوشيال ميديا علشان تعرف معاد الفتح الجاي.
+			انتهى الحجز للمشتركين الجدد 11/1/2026 الساعة 10 مساءً. تابعنا على المنصة والسوشيال ميديا علشان تعرف معاد الفتح الجاي.
 		</p>
 		<p class="banner-reopen">{{ enrollmentReopenMessage }}</p>
 	</div>
@@ -181,7 +181,7 @@
 		<!-- Video Section -->
 		<div class="subscription-video-section">
 			<div class="section-header">
-				<h3 class="section-title">شاهد فيديو تفاصيل الاشتراك لشهر نوفمبر</h3>
+				<h3 class="section-title">شاهد فيديو تفاصيل الاشتراك لشهر يناير</h3>
 			</div>
 			<div class="subscription-video-container">
 				<div class="subscription-video-wrapper">
@@ -201,7 +201,7 @@
 		<div class="features-section">
 			<div class="section-header">
 				<h3 class="section-title">ما ستحصل عليه في الابلكيشن</h3>
-				<p class="section-subtitle">مميزات الاشتراك الكامل</p>
+				<p class="section-subtitle">مميزات الاشتراك </p>
 			</div>
 			<div class="features-grid">
 				<div *ngFor="let feature of subscriptionDetails.features" class="feature-item">
