add details month 2

--- a/mo3adala-handasa/src/app/pages/subscription-details/subscription-details.page.html
+++ b/mo3adala-handasa/src/app/pages/subscription-details/subscription-details.page.html
@@ -185,7 +185,7 @@
 		<!-- Video Section -->
 		<div class="subscription-video-section">
 			<div class="section-header">
-				<h3 class="section-title">شاهد فيديو تفاصيل الاشتراك لشهر يناير</h3>
+				<h3 class="section-title">شاهد فيديو تفاصيل الاشتراك لشهر فبراير</h3>
 			</div>
 			<div class="subscription-video-container">
 				<div class="subscription-video-wrapper">
