--- a/mo3adala-handasa/src/app/shared/components/what-is-equation/what-is-equation.component.html
+++ b/mo3adala-handasa/src/app/shared/components/what-is-equation/what-is-equation.component.html
@@ -11,14 +11,14 @@
 				شاهد الفيديو التوضيحي
 			</h3>
 			<p class="text-slate-600 text-center mb-6">
-				تايه في معادلة هندسة؟ الضربة المزدوجة هتلمّك من الآخر 🎯🦾
+				تايه في معادلة هندسة؟ طب شوف الفيديو فيه 5 مفاجأت وجروب جديد !
 			</p>
 			
 			<!-- Video Container -->
 			<div class="relative bg-black rounded-xl overflow-hidden shadow-2xl" style="padding-bottom: 56.25%;">
 				<iframe 
 					class="absolute top-0 left-0 w-full h-full"
-					src="https://www.youtube.com/embed/7j0Xk8iZlzU?si=Rpo1r4CWFlcvKYwX"
+					src="https://www.youtube.com/embed/CG-OR6ANPGg?si=vPbRP62Rthl5yTaS"
 					title="ابلكيشن معادلة كلية هندسة"
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
